[project]
name = "lyto"
version = "0.2.3"
description = "Automatic wireless ADB connection using QR codes."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "zeroconf>=0.131.0",
    "rich>=13.7.1",
    "sixel",
    "qrcode[pil]>=7.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
lyto = "lyto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
